# Aliro

./: .buildinfo  .coverage  .coverage.7f013def631f.1.546516  .coveragerc  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .noseids  .project  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.md  Test_PennAI_sklearn_API.ipynb  ai.html  api.html  api.raml  apiary.apib  bower.json  build.xml  chatExamples.md  chatapi.html  chatapi.rest  chatapi_source.html  common.env  db.js  developerguide.html  docker-compose-consul.yml  docker-compose-doc-builder.yml  docker-compose-generate-metafeatures.yml  docker-compose-int-test-rpi.yml  docker-compose-int-test.yml  docker-compose-multi-machine.yml  docker-compose-multiarch.yml  docker-compose-production.yml  docker-compose-raspberrypi-production.yml  (+56 more)
_modules/: index.html
_sources/: api.rst.txt  chatapi.rst.txt  index.rst.txt  openai_api.rst.txt  quickstart.rst.txt  userguide.rst.txt
_static/: documentation_options.js
ai/: Makefile  PennAI.py  README.md  __init__.py  _version.py  ai.py  api_utils.py  db_utils.py  knowledgebase_loader.py  knowledgebase_utils.py  metrics.py  ml_ids.py  pennai_sklearn.py  q_utils.py  request_manager.py  results_utils.py  test_db_utils.py  validate_recommendation.py
aliroed-examples/: 1_installation.md  2_experiment.md
awsm/: cloud.js  index.js  make.js  package.json  randomizer.js  ranman.js
config/: ai.env-template  common.env  machine_config.json  readme.md  unit-test-js-only.env  unit-test-py-only.env
docker/: Dockerfile  Makefile
dockers/: Makevars.example  awsm.js  echost.js  elmo.json  experiment.js  killnet.sh  make.js  package.json  ranman.js  toggle  vars
docs/: Dockerfile  Makefile  apache.conf  gp.dia  pilot.dia  requirements.txt
evaluate/: evaluate.py  mock_experiment.py
examples/: README.md
gpocl/: AUTHORS  CMakeLists.txt  INSTALL  README  TODO  gpocl
gpocl/src/: CMakeLists.txt
gpocl/src/common/: CMakeLists.txt  Exception.h
gpocl/src/common/util/: CMakeLists.txt  CmdLineException.h  CmdLineParser.cc  CmdLineParser.h  Random.h  Util.h
gpocl/src/gp/: CMakeLists.txt  CPU.cc  CPU.h  GP.cc  GP.h  GPU.cc  GPU.h  Params.cc  Params.h  Primitives.cc  Primitives.h  gpocl.cc  machine.js  package.json
gpocl/src/gp/CL/: cl.hpp
gpocl/src/gp/CMakeModules/: FindOpenCL.cmake
gpocl/src/gp/examples/: README.md
gpocl/src/gp/examples/Bayesian-Optimisation/: branin_noisy.py  fglab.py  project.json
gpocl/src/gp/examples/Calinski-Harabasz/: README.md  project.json
gpocl/src/gp/examples/Recurrent-Attention-Model/: .dockerignore  Dockerfile_cuda_v6_5  main.lua  tester.lua  trainer.lua
gpocl/src/gp/kernels/: common.cl  cpu.cl  gpu_fpi.cl  gpu_ppcu.cl  gpu_pppe.cl
intropage/: infAndDownloadpage.html  package.json
lab/: .env  .eslintrc.js  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  api.raml  app.json  bower.json  datasets.js  db.js  dbgoose.js  example.env  execapiutils.js  lab.config.js  lab.js  labutils.js  metafeatureGenerator.js  openaiutils.js  package-lock.json  package.json  pubsub.js  pyutils.js  redis-channels.js  redis-pubsub.js  runapiutils.js  sample.test.js  service  socketServer.js  users.js  validator.js  webpack.config.js
learn/: io_utils.py  skl_utils.py  utils.py
machine/: .env  .gitignore  .travis.yml  CHANGELOG.md  README.md  README_FGMachine.md  (+11 more)
(+1923 files in other folders)
